// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonHyperlink snapshot should match snapshot 1`] = `
<ButtonHyperlink>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <a
        className="md-button-hyperlink-wrapper"
        data-disabled={false}
        data-inverted={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        Hyperlink
      </a>
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;

exports[`ButtonHyperlink snapshot should match snapshot when disabled 1`] = `
<ButtonHyperlink
  disabled={true}
>
  <FocusRing
    disabled={true}
  >
    <FocusRing
      disabled={true}
      focusClass="md-focus-ring-wrapper-disabled"
      focusRingClass="md-focus-ring-wrapper-disabled"
    >
      <a
        aria-disabled={true}
        className="md-button-hyperlink-wrapper"
        data-disabled={true}
        data-inverted={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Hyperlink
      </a>
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;

exports[`ButtonHyperlink snapshot should match snapshot when inverted 1`] = `
<ButtonHyperlink
  inverted={true}
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <a
        className="md-button-hyperlink-wrapper"
        data-disabled={false}
        data-inverted={true}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        Hyperlink
      </a>
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;

exports[`ButtonHyperlink snapshot should match snapshot with title 1`] = `
<ButtonHyperlink
  title="Example Text"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <a
        className="md-button-hyperlink-wrapper"
        data-disabled={false}
        data-inverted={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        title="Example Text"
      />
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;
